appId: ${APP_ID}
name: In App Notification
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-7

---
- evalScript: ${output.sender = output.utils.createUser()}
- evalScript: ${output.receiver = output.utils.createUser()}
- evalScript: ${output.room = output.utils.createRandomRoom(output.sender.username, output.sender.password)}
- evalScript: ${output.result = output.utils.createDM(output.receiver.username, output.receiver.password, output.sender.username)}
- evalScript: ${output.dmCreatedRid = output.result.room.rid}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.receiver.username}
      PASSWORD: ${output.receiver.password}

# receive in RoomsListView
- evalScript: ${output.utils.sendMessage(output.sender.username, output.sender.password, output.dmCreatedRid, 'Message in DM')}
- extendedWaitUntil:
    visible:
      id: 'in-app-notification-Message in DM'
    timeout: 60000
- tapOn:
    id: 'in-app-notification-Message in DM'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.sender.username}
- runFlow: '../../helpers/go-back.yaml'

# receive in another room
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: ${output.room.name}
- evalScript: ${output.utils.sendMessage(output.sender.username, output.sender.password, output.dmCreatedRid, 'Another msg')}
- extendedWaitUntil:
    visible:
      id: 'in-app-notification-Another msg'
    timeout: 60000
- tapOn:
    id: 'in-app-notification-Another msg'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.sender.username}

# should tap back and go back to RoomsListView
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
