appId: ${APP_ID}
name: Join From Directory
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-7

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}
- evalScript: ${output.team = output.utils.createRandomTeam(output.user.username, output.user.password)}
- evalScript: ${output.thread = output.random() + 'thread'}
- evalScript: ${output.result = output.utils.sendMessage(output.user.username, output.user.password, 'join-from-directory', output.thread)}
- evalScript: ${output.threadReply = output.utils.sendMessage(output.user.username, output.user.password, output.result.message.rid, 'insidethread', output.result.message._id)}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# should tap directory
- waitForAnimationToEnd:
    timeout: 10000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-directory'
      IOS_LABEL: 'Directory'
- extendedWaitUntil:
    visible:
      id: 'directory-view'
    timeout: 60000

# should search public channel and navigate
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'directory-view-search'
- inputText: join-from-directory
- extendedWaitUntil:
    visible:
      id: 'directory-view-item-join-from-directory'
    timeout: 60000
- tapOn:
    id: 'directory-view-item-join-from-directory'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'join-from-directory'

# should navigate to thread messages view and load messages
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-view-header-threads'
      IOS_LABEL: 'Threads'
- extendedWaitUntil:
    visible:
      id: 'thread-messages-view-${output.thread}'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            id: 'room-view-header-threads'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Threads'
          timeout: 60000

# should search user and navigate
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-directory'
      IOS_LABEL: 'Directory'
- extendedWaitUntil:
    visible:
      id: 'directory-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/select-header-filter.yaml'
    env:
      ANDROID_FILTER_ID: 'directory-view-filter'
      ANDROID_OPTION_ID: 'directory-switch-users'
      IOS_OPTION: 'Users'
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'directory-view-search'
- inputText: ${output.otherUser.username}
- runFlow:
    when:
      platform: iOS
    commands:
      - pressKey: enter
- extendedWaitUntil:
    visible:
      id: 'directory-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'directory-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.otherUser.username}

# should search team and navigate
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-directory'
      IOS_LABEL: 'Directory'
- extendedWaitUntil:
    visible:
      id: 'directory-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/select-header-filter.yaml'
    env:
      ANDROID_FILTER_ID: 'directory-view-filter'
      ANDROID_OPTION_ID: 'directory-switch-teams'
      IOS_OPTION: 'Teams'
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'directory-view-search'
- inputText: ${output.team}
- extendedWaitUntil:
    visible:
      id: 'directory-view-item-${output.team}'
    timeout: 60000
- tapOn:
    id: 'directory-view-item-${output.team}'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.team}
